# ttracking

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: detect_court.py  download_video.py  tune_params.py
src/tennis_tracking/: config.py
src/tennis_tracking/court/: classical.py  court_model.py  filters.py  homography.py
src/tennis_tracking/video/: downloader.py  reader.py
src/tennis_tracking/viz/: draw.py
tests/: test_court_model.py  test_video_reader.py
