[project]
name = "tennis-tracking"
version = "0.1.0"
description = "Tennis match computer vision analysis"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10",
    "numpy>=2.0",
    "pydantic>=2.0",
    "yt-dlp>=2024.0",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tennis_tracking"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
